[package]
name = "curator"
version = "0.1.0"
edition = "2024"

[dependencies]
repos = { path = "../repos" }
data = { path = "../data", default-features = false, features = ["ssr"] }
common = { path = "../common", default-features = false, features = ["ssr"] }

# Serde / json
serde.workspace = true
serde_json.workspace = true

# SurrealDB
surrealdb.workspace = true

# Tokio / Axum
tokio.workspace = true

# # Command line parsing
clap.workspace = true

# Tracing
tracing.workspace = true
# tracing-subscriber.workspace = true
# tracing-appender.workspace = true
# tracing-log.workspace = true

# Misc
apalis.workspace = true
apalis-codec.workspace = true
apalis-core.workspace = true
apalis-cron.workspace = true
apalis-redis.workspace = true
cron.workspace = true
# async-trait.workspace = true
bytes.workspace = true
# chrono.workspace = true
futures.workspace = true
log.workspace = true
object_store.workspace = true
redis.workspace = true
thiserror.workspace = true
# time.workspace = true
uuid.workspace = true
fancy-regex.workspace = true
# minidump.workspace = true
# minidump-processor.workspace = true
