[package]
name = "data"
version.workspace = true
edition.workspace = true

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true

# Misc
uuid.workspace = true
chrono.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
ssr = []
