[package]
name = "ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../../common/common", default-features = false, features = ["ssr"] }

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tokio / Axum
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true

# Command line parsing
clap.workspace = true

# Tower
tower.workspace = true
tower-http.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

# Misc
async-trait.workspace = true
chrono.workspace = true
data-encoding.workspace = true
fancy-regex.workspace = true
futures.workspace = true
rhai.workspace = true
thiserror.workspace = true
uuid.workspace = true
log.workspace = true
object_store.workspace = true
apalis.workspace = true
apalis-redis.workspace = true
bytes.workspace = true
redis.workspace = true

[dev-dependencies]
testware = { path = "../testware" }
mockall.workspace = true
