[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data", default-features = false, features = [
  "ssr",
] }
common = { path = "../common", default-features = false, features = [
  "ssr",
] }

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tokio / Axum
tokio.workspace = true

# Command line parsing
clap.workspace = true

# Tracing
tracing.workspace = true

# Minidump processing
minidump.workspace = true
minidump-processor.workspace = true
minidump-unwind.workspace = true
# breakpad-symbols.workspace = true

# Misc
apalis.workspace = true
apalis-postgres.workspace = true
async-trait.workspace = true
bytes.workspace = true
fancy-regex.workspace = true
log.workspace = true
object_store.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
