[package]
name = "processor"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common", default-features = false, features = [
  "ssr",
] }

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tokio / Axum
tokio.workspace = true

# Command line parsing
clap.workspace = true

# Tracing
tracing.workspace = true

# Minidump processing
minidump.workspace = true
minidump-processor.workspace = true
minidump-unwind.workspace = true
# breakpad-symbols.workspace = true

# Misc
apalis.workspace = true
apalis-redis.workspace = true
async-trait.workspace = true
bytes.workspace = true
fancy-regex.workspace = true
log.workspace = true
object_store.workspace = true
thiserror.workspace = true
uuid.workspace = true
