[package]
name = "testware"
version.workspace = true
edition.workspace = true

[dependencies]
repos = { path = "../repos" }
data = { path = "../data", default-features = false, features = ["ssr"] }
common = { path = "../common", default-features = false, features = ["ssr"] }

# Serde / json
serde.workspace = true
serde_json.workspace = true

# SurrealDB
surrealdb.workspace = true

# Tokio / Axum
tokio.workspace = true
rustls.workspace = true

# Security
argon2.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

# Misc
async-trait.workspace = true
chrono.workspace = true
data-encoding.workspace = true
rand.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
log.workspace = true
mockall.workspace = true
object_store.workspace = true
futures.workspace = true
