[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]

# Serde / json
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true

# Misc
config.workspace = true
argon2 = { workspace = true }
password-hash = { workspace = true, features = ["getrandom"] }
rand = { workspace = true}
uuid.workspace = true
base64.workspace = true
glob.workspace = true
natord.workspace = true
object_store = { workspace = true }
axum = { workspace = true }
tokio.workspace = true

[features]
default = []
