[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
repos = { path = "../../backend/repos" }
data = { path = "../../backend/data", default-features = false, features = ["ssr"] }
common = { path = "../../backend/common", default-features = false, features = ["ssr"] }

askama = "0.15.6"
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
webauthn-rs.workspace = true
