[package]
name = "web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "web"
path = "src/main.rs"

[[bin]]
name = "guardrailctl"
path = "src/bin/tool.rs"

[dependencies]
repos = { path = "../../common/repos" }
data = { path = "../../common/data", default-features = false, features = ["ssr"] }
common = { path = "../../common/common", default-features = false, features = ["ssr"] }
email = { path = "../../common/email" }

askama.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
object_store.workspace = true
url.workspace = true
uuid.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true

[dev-dependencies]
testware = { path = "../../backend/testware" }
